tests/baselines/reference/awaitBindingElement3.errors.txt
tests/cases/conformance/async/downlevel/awaitBindingElement/awaitBindingElement3.ts(9,34): error TS1310: 'await' expression is not allowed in an initializer.


==== tests/cases/conformance/async/downlevel/awaitBindingElement/awaitBindingElement3.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    declare var a: number;
    declare var o: { x: number; };
    declare var pa: Promise<number>;
    declare var po: Promise<{x: number;}>;
    async function func({ x } = await po): Promise<void> {
                                     
!!! error TS1310: 'await' expression is not allowed in an initializer.
    }
    